# 3ric

22v10/: 3ricDecoder.PLD  3ricDecoder.si  A2COLOR.PLD  EB6502 DECODER.PLD
diylayout/: 3RIC.diy
emulator/: Badger6502VM.sln
emulator/Badger6502/: Badger6502.aps  Badger6502.cpp  Badger6502.rc  Badger6502.vcxproj  Badger6502.vcxproj.filters  Resource.h
emulator/Badger6502Emulator/: App.idl  App.xaml  App.xaml.cpp  App.xaml.h  Badger6502Emulator.vcxproj  Badger6502Emulator.vcxproj.filters  BreakPointItem.cpp  BreakPointItem.h  MainWindow.idl  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h  MappedFile.cpp  MappedFile.h  MemoryWindow.idl  MemoryWindow.xaml  MemoryWindow.xaml.cpp  MemoryWindow.xaml.h  ResizeBorder.cpp  ResizeBorder.h  SymbolWindow.idl  SymbolWindow.xaml  SymbolWindow.xaml.cpp  SymbolWindow.xaml.h  app.manifest  packages.config  pch.h  readme.txt
emulator/Badger6502Emulator (Package)/: Badger6502Emulator (Package).wapproj  Package.appxmanifest
emulator/Badger6502VM/: Badger6502VM.vcxproj  main.cpp  packages.config
emulator/Badger6502VMLib/: Badger6502VMLib.vcxproj  Disassemble.cpp  Instructions.cpp  PS2Keyboard.cpp  Project1.vcxproj.filters  acia.cpp  acia.h  badgervmpal.cpp  badgervmpal.h  cpu.cpp  cpu.h  opcodes.h  ps2keyboard.h  symbols.cpp  symbols.h  via.cpp  via.h  vm.cpp  vm.h
emulator/Badger6502VMTest/: ADC_SBC.cpp  AND.cpp  BIT.cpp  Badger6502VMTest.vcxproj  Badger6502VMTest.vcxproj.filters  Branching.cpp  Compare.cpp  EOR.cpp  Flags.cpp  IncDec_Mem.cpp  Interrupts.cpp  JMP.cpp  JSR_RTS.cpp  LDA.cpp  LDX.cpp  LDY.cpp  ORA.cpp  RegisterTransfer.cpp  Registers.cpp  SMB_RMB.cpp  STA.cpp  STX.cpp  STY.cpp  STZ.cpp  Shifting.cpp  Stack.cpp  TSB_TRB.cpp  pch.h
emulator/Console/: Console.cpp  Console.h  Console.vcxproj  Console.vcxproj.filters  ConsoleHost.cpp
emulator/Data/: badger6502.dbg  loderun.dbg
emulator/MockMicroSD/: MappedFile.cpp  MappedFile.h  MockMicroSD.cpp  MockMicroSD.vcxproj  MockMicroSD.vcxproj.filters  SDCard.cpp  SDCard.h  pch.h
emulator/picodisk/: CMakeLists.txt  Makefile  cmake_install.cmake
emulator/picodisk/arduino_test/arduino_test_harness/: arduino_test_harness.ino
emulator/picodisk/exe/: CMakeLists.txt  Console.cpp  Console.h  DriveEmulator.cpp  DriveEmulator.h  Makefile  Timing.h  WozDisk.cpp  WozDisk.h  WozFile.cpp  WozFile.h  ccsctrl.pio  ccsdata.pio  cmake_install.cmake  hw_config.c  picodisk.cpp  sdcard.cpp  sdcard.h  tusb_config.h
emulator/picodisk/sdlib/FatFs_SPI/sd_driver/: sd_card.h  spi.c
emulator/picodisk/sdlib/FatFs_SPI/src/: glue.c
kicad/3ric/: 3ric.dsn  (+40 more)
logisim/: address_decode.circ  apple2color.circ
(+120 files in other folders)
